[gd_scene load_steps=2 format=3 uid="uid://b4n2xvq8jwqkp"]

[ext_resource type="Script" path="res://scripts/MarkingMiniGame.gd" id="1_2p3x8"]

[node name="MarkingMiniGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2p3x8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.6, 0.2, 1)

[node name="GameArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="FieldBackground" type="ColorRect" parent="GameArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.3, 0.8, 0.3, 1)

[node name="FieldLines" type="Control" parent="GameArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterCircle" type="ColorRect" parent="GameArea/FieldLines"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.3)

[node name="PlayerCharacter" type="Control" parent="GameArea"]
layout_mode = 1
anchors_preset = 0

[node name="RivalCharacter" type="Control" parent="GameArea"]
layout_mode = 1
anchors_preset = 0

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0

[node name="TimerLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 24
text = "Tiempo: 30s"

[node name="DistanceBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 220.0
offset_top = -60.0
offset_right = 520.0
offset_bottom = -40.0
max_value = 150.0
value = 0.0
show_percentage = false

[node name="DistanceLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 220.0
offset_top = -80.0
offset_right = 320.0
offset_bottom = -60.0
text = "Distancia:"

[node name="HUD" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TimerLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 24
text = "Tiempo: 30s"

[node name="LevelLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 20
text = "NIVEL 1/3"
horizontal_alignment = 2

[node name="DistanceBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 220.0
offset_top = -60.0
offset_right = 520.0
offset_bottom = -40.0
max_value = 150.0
value = 0.0
show_percentage = false

[node name="AccuracyLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 540.0
offset_top = -80.0
offset_right = 720.0
offset_bottom = -40.0
theme_override_font_sizes/font_size = 18
text = "Precisión: 0%"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 18
text = "¡Mantente cerca del jugador rival!
Usa WASD o flechas para moverte"
horizontal_alignment = 2

[node name="InstructionPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="InstructionText" type="Label" parent="UI/InstructionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -150.0
offset_right = 280.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Instrucciones del juego"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="StartButton" type="Button" parent="UI/InstructionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 100.0
offset_right = 80.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
text = "INICIAR"

[node name="ResultPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="UI/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -60.0
offset_right = 180.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Resultado"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="UI/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Reintentar"

[node name="ContinueButton" type="Button" parent="UI/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Continuar"

[node name="NextLevelButton" type="Button" parent="UI/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
text = "SIGUIENTE"
